--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "openai": "^4.96.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-router-dom": "^7.5.2",
+    "recharts": "^2.15.3",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.1.0"
   },
